unix/lang/tests/error/switch_goto_error2.yab
#expect#---Error in switch_goto_error2.yab, line 9: GOTO into a switch-statement
#expect#     case 0: label other
#expect#                   ^~~~~
#expect#---Error: Program stopped due to an error

goto other

switch 0
  case 0: label other
end switch

